--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -2,8 +2,10 @@ version: 0.2
 
 phases:
   install:
-    commands:
-      - nohup /usr/local/bin/dockerd --host=unix:///var/run/docker.sock --host=tcp://127.0.0.1:2375 --storage-driver=overlay2&
+    runtime-versions:
+      docker: 18
+    
+    
   pre_build:
     commands:
       - docker build -t helloworld .
